--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>Integración API.AI+BotLibre en simple JS/HTML</title>
+	<title>El Bodeguero</title>
+	<link rel="shortcut icon" href="/images/alicorp-squarelogo-1540813111809.png" type="image/x-icon">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.css">
@@ -13,25 +14,19 @@
 </head>
 <body>
 
-      <div class="row">
-		<div class="col s4"></div>
-        <div class="col s4">
+      <div class="container">
+		<div class="col s4  offset-s2 ">
+			<img src="/images/bod.jpg"  class="responsive-img" alt="pepe" >
+		</div>
+        <div class="col s4 offset-s2 ">
           <div class="card white">
             <div class="card-content">
            <div id='bot-div' style='background-color:transparent'>
 			<div class="row">
-				<div id='avatar-video-div' class="avatarCenter" style='background-repeat: no-repeat;'>
-					<video id='avatar-video' autoplay preload='auto' style='background:transparent;height:320px;'>
-					Video format not supported by your browser (try Chrome)
-					</video>
-				</div>
-				<div id='avatar-canvas-div' class="avatarCenter">
-					<canvas id='avatar-canvas' style='background:transparent;height:320px;' class="avatarCenter">
-					Canvas not supported by your browser (try Chrome)
-					</canvas>
-				</div>
+			
+				
 				<div>
-				<p id='response'>Bot: </p>
+				<p id='response'>El Bodeguero: </p>
 				</div>  
 			 </div>
             </div>
@@ -42,7 +37,7 @@
             </div>
           </div>
         </div>
-		<div class="col s4"></div>
+	
       </div>
 	  
 	  
