--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.css">
 	<link rel="stylesheet" href="stylesheets/style.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-	<script src="http://www.botlibre.com/scripts/sdk.js"></script>
+	<script src="https://www.botlibre.com/scripts/sdk.js"></script>
 	<script type="text/javascript" src="javascripts/ai.js"></script>
 
 </head>
