--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="container">
 		<div class="col s4  offset-s2 ">
-			<img src="./images/pepe.jpeg"  class="responsive-img" alt="pepe" >
+			<img src="./images/pepe.jpeg"  style="height: 61%;" class="responsive-img" alt="pepe" >
 		</div>
         <div class="col s4 offset-s2 ">
           <div class="card white">
